--- a/public/styles/styles_global.css
+++ b/public/styles/styles_global.css
@@ -10,6 +10,7 @@
 .margin-0               {  margin:0;  }
 .margin-top-0           {  margin-top:0;  }
 .margin-bottom-0        {  margin-bottom:0;  }
+.margin-auto            {  margin:auto;  }
 .cursor-pointer         {  cursor: pointer; }
 
 .width-percent-100      {  width:100% !important;  }
@@ -17,4 +18,7 @@
 .background-color-black {  background-color:black !important;  }
 .text-color-white       {  color:white !important;  }
 .text-color-black       {  color:black !important;  }
+.text-color-mdl-grey    {  color:rgba(0,0,0,.54);  }
 .font-bold              {  font-weight:bold  !important;}
+
+.display-none           {  display:none;  }
