Intergrated javascript email handler using google doc scripts, https://github.com/dwyl/html-form-send-email-via-google-script-without-server style changes and form validation

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -16,6 +16,9 @@
 .eck-company-tabs{
     cursor: pointer;
 }
+.eck-company-info{
+    padding-left: 20px;
+}
 /*PROJECTS IVE WORKED ON*/
 .eck-transparent-overlay{
     opacity:0;
@@ -45,6 +48,9 @@
 .eck-contact-form, .eck-contact-info{
     max-width: 550px;
     margin: auto;
+}
+#email-invalid{
+    color:red;
 }
 /*IMAGES*/
 .eck-card-portrait-image{
