--- a/public/styles/styles_global.css
+++ b/public/styles/styles_global.css
@@ -1,5 +1,6 @@
-.mdl-grid-width         {  max-width:900px;  }
-.mdl-grid-width-1000    {  max-width:1000px;  }
+.mdl-grid-width-index   {  max-width:850px;  }
+.mdl-grid-width-info    {  max-width:1000px;  }
+.mdl-grid-width-contact {  max-width:750px;  }
 .min-height-300         {  min-height:300px;  }
 .min-height-400         {  min-height:400px;  }
 .min-height-500         {  min-height:500px;  }
