--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -44,6 +44,9 @@
     padding-right:10px;
     width:25px;
 }
+.gist-data{
+    max-height: 300px;
+}
 /*Contact Form*/
 .eck-contact-form, .eck-contact-info{
     max-width: 550px;
